trunk/tests/kiama/negative/type_errors/L4/7_badarray11.ob
MODULE badarray11;

VAR
    abool : BOOLEAN;
    
BEGIN
    abool[3] := 4
END badarray11.
